// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link test on android Link doesnt change inner text styles 1`] = `
<View
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  pointerEvents="box-only"
>
  <Text>
    Hello
  </Text>
</View>
`;

exports[`Link test on android Link renders correctly 1`] = `
<View
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  pointerEvents="box-only"
>
  The Times
</View>
`;

exports[`Link test on android TextLink renders correctly with children 1`] = `
<Text
  accessibilityRole="link"
  style={
    Object {
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`Link test on android TextLink renders correctly with multiple styles 1`] = `
<Text
  accessibilityRole="link"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`Link test on android TextLink renders correctly with specific styles 1`] = `
<Text
  accessibilityRole="link"
  style={
    Object {
      "backgroundColor": "blue",
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;
